[package]
name = "spot"
description = "HTTP server framework that emphezies simplicity and minimalism. Inspired by Flask and Exress.js"
version = "0.1.3"
repository = "https://github.com/memir0/spot"
documentation = "https://github.com/emirdero/spot/wiki/Documentation"
keywords = ["http", "spot", "web", "server"]
categories = ["network-programming", "web-programming::http-server"]
authors = ["Emir Derouiche"]
edition = "2018"
license = "MIT"

include = [
  "Cargo.toml",
  "src/**/*",
  #"build.rs",
]


[dependencies]